--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Geemonpy.github.io/Wroxxo",
+  "homepage": "https://Geemonpy.github.io/wroxofood",
   "name": "ecommerce",
   "version": "0.1.0",
   "private": true,
